--- a/package.json
+++ b/package.json
@@ -25,6 +25,18 @@
   "dependencies": {
     "express": "^4.18.2",
     "minimist": "^1.2.8",
-    "morgan": "^1.10.0"
-  }
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22"
+  },
+  "directories": {
+    "example": "examples"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/comp426-2023-spring/e02-ha0406.git"
+  },
+  "bugs": {
+    "url": "https://github.com/comp426-2023-spring/e02-ha0406/issues"
+  },
+  "homepage": "https://github.com/comp426-2023-spring/e02-ha0406#readme"
 }
